<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    app:cardElevation="@dimen/text_margin"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_marginEnd="@dimen/text_margin"
                android:id="@+id/courseIcon"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cs"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/text_margin"
                android:fontFamily="@string/bold"
                android:text="@string/computer_science"
                android:id="@+id/courseTitle"
                android:textColor="@color/text"
                android:textSize="@dimen/title_size"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_collage"
            android:layout_margin="@dimen/text_margin"
            android:layout_gravity="center_horizontal"
            android:id="@+id/courseDescription"
            android:textSize="@dimen/text_size"
            android:fontFamily="@string/light"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>