<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/text_margin"
    app:cardBackgroundColor="#E7EAEA"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_margin"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="12dp"
                tools:ignore="RtlSymmetry">


                <TextView
                    android:id="@+id/teacherName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/bold"
                    android:text="@string/shlok_aggrawal"
                    android:textColor="@color/text"
                    android:textSize="@dimen/title_size"/>


                <TextView
                    android:id="@+id/teacherPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/regular"
                    android:text="@string/senior_android_developer"
                    android:textColor="@color/text"
                    android:textSize="@dimen/title_size2" />


                <TextView
                    android:id="@+id/teacherEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/regular"
                    android:text="@string/shlok0531_gmail_com"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_size" />


            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/teacherImage"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/text_margin"
                android:layout_weight="0.5"
                android:src="@drawable/avatar" />


        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>