<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/sliderView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                app:cardBackgroundColor="@color/lavender"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:iss_auto_cycle="true"
                    app:iss_corner_radius="20"
                    app:iss_delay="1000"
                    app:iss_period="1000"
                    app:iss_title_background="@drawable/gradient"/>

            </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/text_margin"
                            android:fontFamily="@string/bold"
                            android:text="@string/ips"
                            android:textColor="@color/text"
                            android:textSize="@dimen/title_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/text_margin"
                            android:layout_marginTop="@dimen/text_margin"
                            android:fontFamily="@string/light"
                            android:text="@string/about_collage"
                            android:textColor="@color/text"
                            android:textSize="@dimen/text_size" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="36dp"
                            android:background="@color/lavender"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="8dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="36dp"
                                    android:fontFamily="@string/bold"
                                    android:text="@string/courses"
                                    android:textColor="@color/text"
                                    android:textSize="@dimen/title_size" />

                                <com.google.android.material.card.MaterialCardView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:cardCornerRadius="30dp"
                                    android:layout_marginTop="12dp">

                                    <androidx.viewpager.widget.ViewPager
                                        android:layout_width="match_parent"
                                        android:layout_height="250dp"
                                        android:clipToPadding="false"
                                        android:foregroundGravity="center"
                                        android:overScrollMode="never"
                                        android:id="@+id/viewPagerid"/>

                                </com.google.android.material.card.MaterialCardView>

                            </LinearLayout>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="@dimen/text_margin">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="36dp"
                                android:fontFamily="@string/bold"
                                android:text="@string/contact_details"
                                android:textColor="@color/text"
                                android:textSize="@dimen/title_size"
                                android:textAlignment="center"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="@string/ips_college"
                                android:textColor="@color/text"
                                android:textSize="@dimen/text_size"
                                android:textAlignment="center"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="@string/ips_address"
                                android:textColor="@color/text"
                                android:textSize="@dimen/text_size" />


                            <androidx.cardview.widget.CardView
                                android:id="@+id/mapcard"
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginEnd="20dp"
                                android:layout_marginBottom="20dp"
                                android:background="@drawable/map"
                                app:cardBackgroundColor="@color/lavender"
                                app:cardCornerRadius="20dp"
                                app:cardElevation="8dp">

                                <ImageView
                                    android:id="@+id/map"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:src="@drawable/map"
                                    android:scaleType="fitXY" />

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>