<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.ForgetPasswordActivity">

    <!--        <include layout="@layout/my_video_background"/>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:background="@color/Primary"
                android:orientation="vertical"
                android:paddingTop="75dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ips_college_only"
                    android:textColor="@color/textColor"
                    android:textSize="22sp"
                    android:layout_marginTop="42dp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ips"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="center_horizontal"/>

                <View
                    android:layout_width="80dp"
                    android:layout_height="4dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="22dp"
                    android:background="#c1c1c1"/>

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                android:layout_marginTop="-60dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forget_password"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_margin="16dp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ForgetEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:hint="@string/email_id"
                            android:inputType="textEmailAddress"/>

                    </com.google.android.material.textfield.TextInputLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:textAlignment="center"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/back_to_login"
                            android:fontFamily="sans-serif"/>

                        <TextView
                            android:id="@+id/ForgetToLogin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/Primary"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:fontFamily="sans-serif"/>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/ForgetButton"
                android:text="@string/forget_password"
                android:layout_marginHorizontal="24dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                app:cornerRadius="8dp"/>


        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>